--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "lint": "eslint . --fix"
   },
   "author": "",
@@ -13,15 +13,20 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "save-dev": "^0.0.1-security",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-plugin-prettier": "^5.0.0-alpha.1",
+    "eslint-plugin-vitest-globals": "^1.3.1",
     "nodemon": "^2.0.22",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "vitest": "^0.33.0"
   }
 }
