--- a/auth/package.json
+++ b/auth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "coverage": "vitest run --coverage",
     "test": "vitest",
     "lint": "eslint . --fix"
   },
@@ -20,6 +21,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^0.33.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
@@ -27,6 +29,7 @@
     "eslint-plugin-vitest-globals": "^1.3.1",
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "vitest-mock-express": "^2.0.3"
   }
 }
