--- a/.github/workflows/graphql-ci.yml
+++ b/.github/workflows/graphql-ci.yml
@@ -23,13 +23,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      # Uncomment once subdirecories are supported
       # - name: Validate Gradle wrapper
       #   uses: gradle/wrapper-validation-action@v1
 
       - name: Gradle Build
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: build
+          arguments: build jacocoCoverageVerification
           build-root-directory: graphql
 
 
