--- a/auth/package.json
+++ b/auth/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-vitest-globals": "^1.3.1",
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
+    "supertest": "^6.3.3",
     "vitest": "^0.33.0",
     "vitest-mock-express": "^2.0.3"
   }
