--- a/auth/package.json
+++ b/auth/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.2",
     "express-promise-router": "^4.1.1",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.1",
+    "node-jose": "^2.2.0",
     "pg": "^8.11.1",
     "save-dev": "^0.0.1-security",
     "zod": "^3.21.4"
@@ -29,6 +29,7 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-plugin-prettier": "^5.0.0-alpha.1",
     "eslint-plugin-vitest-globals": "^1.3.1",
+    "mock-fs": "^5.2.0",
     "nodemon": "^2.0.22",
     "prettier": "^3.0.0",
     "supertest": "^6.3.3",
